# serializer version: 1
# name: test_async_get_config_entry_diagnostics[Only URL and username]
  dict({
    'data': dict({
      'url': 'https://example.com',
      'username': '**REDACTED**',
    }),
    'options': dict({
    }),
  })
# ---
# name: test_async_get_config_entry_diagnostics[Only URL]
  dict({
    'data': dict({
      'url': 'https://example.com',
    }),
    'options': dict({
    }),
  })
# ---
# name: test_async_get_config_entry_diagnostics[URL and all auth params]
  dict({
    'data': dict({
      'api_key': '**REDACTED**',
      'password': '**REDACTED**',
      'url': 'https://example.com',
      'username': '**REDACTED**',
    }),
    'options': dict({
    }),
  })
# ---
